# basement-plant

./: .gitignore  AGENTS.md  COMPASS.md  CONTEXT.md  README.md  main.py  pyproject.toml
.github/workflows/: basement-site.yml
.scratch/basement-dampness-analysis/: map.md  todo.md
.scratch/basement-ops-and-site-polish/: map.md
.scratch/dehumidifier-next-full-estimate/: PRD.md
.scratch/site-build-static-assets-and-test-cleanup/: PRD.md
docs/agents/: domain.md
docs/architecture/: cloudflare-email-r2-static-site.md
docs/reference/: meaco-arete-two-25l-manual-notes.md  x-sense-sth51-manual-notes.md
infra/cloudflare/: README.md
prototypes/basement-dehumidifier-report/: NOTES.md  PRD.md  report.html
prototypes/basement-dehumidifier-uncertainty/: NOTES.md  prototype.py  report.html
prototypes/basement_dehumidifier/: NOTES.md  UNCERTAINTY_PROTOTYPE_NOTES.md  prototype.py
prototypes/cloudflare-container-duckdb-analysis/: Dockerfile  NOTES.md  package-lock.json  package.json  prototype.py  pyproject.toml  wrangler.toml
prototypes/cloudflare-python-duckdb-worker/: NOTES.md  pyproject.toml  wrangler.toml
prototypes/physics-and-metrology-report-mock/: README.md
prototypes/raw-email-csv-processing-state/: NOTES.md  prototype.py
scripts/: generate_frutiger_aero_assets.py  print_tank_timeline.py
tests/: synthetic_tank_series.py  test_cli.py  test_curated_dataset.py  test_hosted_curation.py  test_observability.py  test_package_import.py  test_raw_email_ingest.py  test_static_site_summary.py  test_tank_estimator.py  test_tank_estimator_snapshot_validation.py
(+151 files in other folders)
